--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -129,7 +129,7 @@ $fonts: '../../fonts' !default;
   font-family: 'PlexesPro light';
   src: url('#{$fonts}/Plexel/PlexesPro-Light.otf') format('opentype'),
   url('#{$fonts}/Plexel/PlexesPro_Light.woff') format("woff"),
-  url('#{$fonts}/Plexel/Plexespro_Light.ttf') format('truetype');
+  url('#{$fonts}/Plexel/PlexesPro_Light.ttf') format('truetype');
   font-display: swap;
   font-weight: 400;
   font-style: normal;
