--- a/src/sass/components/login.scss
+++ b/src/sass/components/login.scss
@@ -48,6 +48,9 @@
     @media(min-width: 1024px) {
       top: 22rem;
     }
+    @media(min-width: 1450px) {
+      top: 50%;
+    }
     @media(min-width: 2400px) {
       top: 23.5rem;
     }
@@ -59,6 +62,9 @@
         margin-bottom: 77px;
         @media(min-width: 1024px) {
           margin-bottom: 48px;
+        }
+        @media(min-width: 1450px) {
+          margin-bottom: 14%;
         }
         h2  {
           text-transform: uppercase;
@@ -97,6 +103,10 @@
             height: 63px;
             font-size: 1.2rem;
           }
+          @media(min-width: 1450px) {
+            height: 75px;
+            width: 420px;
+          }
         }
         &:nth-child(3) {
           margin: 0 auto 6px;
@@ -129,8 +139,14 @@
       //Button
       .button-fifth {
         margin: 28px auto 18px;
+        @media(min-width: 1450px) {
+          width: 260px;
+        }
         input {
           width: 100%;
+          @media(min-width: 1450px) {
+            font-size: 1.4rem;
+          }
         }
         @media(min-width: 1024px) {
           margin: 44px auto 18px;
