--- a/src/sass/components/regist.scss
+++ b/src/sass/components/regist.scss
@@ -21,6 +21,9 @@
   height: 1020px;
   min-height: 60rem;
   //Background image
+  @media(min-width: 1450px) {
+    height: 1300px;
+  }
   &::before {
     content: "";
     background-image: url('../../images/bg-regist.png');
@@ -39,6 +42,9 @@
     @media(min-width: 1024px) {
       top: 8rem;
     }
+    @media(min-width: 1450px) {
+      top: 14rem;
+    }
     //Title
     .title-register {
       text-align: center;
@@ -56,6 +62,9 @@
           font-size: 4.9rem;
           letter-spacing: 10px;
           font-weight: 900;
+        }
+        @media(min-width: 1450px) {
+          font-size: 6rem;
         }
       }
     }
@@ -94,6 +103,10 @@
               text-align: center;
               height: 63px;
               font-size: 1.2rem;
+            }
+            @media(min-width: 1450px) {
+              height: 70px;
+              width: 430px;
             }
           }
         }
