--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -1,6 +1,6 @@
 .secundary-slider {
   .title-component {
-    height: 8.8rem;
+    padding: 2rem 0rem;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -8,24 +8,26 @@
     align-items: center;
     justify-content: flex-start;
     @media(min-width: 1024px) {
-      height: 8rem;
+      height: 7rem;
     }
     @media(min-width: 1450px) {
-      height: 10rem;
+      height: 9rem;
     }
     .font-line-black {
       padding-left: 3rem;
+      @media(max-width: 1023px) {
+        line-height: 0.7;
+      }
       @media(min-width: 1024px) {
         font-size: 4rem;
         display: flex;
       }
       span {
-        @media(min-width: 1024px) {
-          font-family: 'HelveticaNeue';
-          color: gray;
-          font-size: 2.2rem;
-          -webkit-text-stroke: black;
-        }
+        font-family: "HelveticaNeue";
+        color: gray;
+        font-size: 2.2rem;
+        -webkit-text-stroke: black;
+        font-weight: bold;
       }
     }
   }
