--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -21,7 +21,6 @@ header {
   width: 100%;
   z-index: 2;
   position: absolute;
-
   //Navbar
   .menu-horizontal {
     display: none;
@@ -242,6 +241,11 @@ header {
     height: 500px;
     width: 100%;
 
+    transition: transform 300ms;
+
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
     &::before {
       content: '';
       background: url('../../images/bg-menu.png') center/cover no-repeat;
@@ -257,11 +261,14 @@ header {
       z-index: 10;
       margin: 0;
       width: 100%;
-      margin: 163px 30px 0;
 
+
+      text-align: left;
+      width: 85vw;
+      position: absolute;
+      transform: translateY(-50%);
+      top: 40%;
       @media (min-width: 360px) {
-        margin: 163px 30px 0;
-        text-align: center;
       }
     }
 
@@ -276,12 +283,31 @@ header {
       transition: color 300ms;
       font-family: $px-black;
       text-transform: uppercase;
-      font-size: 2rem;
+      font-size: 2.1rem;
       letter-spacing: 1px;
-
+      @media(min-width: 345px) {
+        font-size: 2.5rem;
+      }
       &:hover {
         color: black;
       }
     }
+    .footer-principal  {
+      background: #000000;
+      text-align: center;
+      position: absolute;
+      display: flex;
+      flex-direction: column;
+      z-index: 10;
+      width: 100vw;
+      top: 90%;
+    }
   }
+}
+
+.ocultar {
+  display: none !important;
+}
+.heightvh {
+  height: 100vh !important;
 }
