--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -125,10 +125,10 @@ $data_buttons: (
   ),
   'second': (
     principal_bg: $orange_primary,
-    secondary_bg: $black,
+    secondary_bg: $white,
     first_color: $white,
-    second_color: $white,
-    data_query: 'first'
+    second_color: $black,
+    data_query: 'bedroom'
   ),
   'third': (
     principal_bg: $black,
@@ -150,5 +150,19 @@ $data_buttons: (
     first_color: $white,
     second_color: $black,
     data_query: 'fifth'
+  ),
+  'six': (
+    principal_bg: $black,
+    secondary_bg: $orange_primary,
+    first_color: $white,
+    second_color: $white,
+    data_query: 'six'
+  ),
+  'seven': (
+    principal_bg: $orange_primary,
+    secondary_bg: $black,
+    first_color: $white,
+    second_color: $white,
+    data_query: 'third'
   )
 );
