--- a/src/sass/components/regist-full.scss
+++ b/src/sass/components/regist-full.scss
@@ -41,6 +41,7 @@
     max-width: 100%;
     margin-top: 8.5rem;
     text-align: center;
+    z-index: 10;
     @media(min-width: 768px) {
       margin-top: 11.3rem;
     }
