Style font secundary slider

--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -240,7 +240,7 @@ header {
     position: relative;
     height: 500px;
     width: 100%;
-
+    min-height: 660px;
     transition: transform 300ms;
 
     height: 100vh;
