--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -23,11 +23,11 @@
         display: flex;
       }
       span {
-        font-family: "HelveticaNeue";
+        font-family: 'PlexesPro black';
         color: gray;
         font-size: 2.2rem;
         -webkit-text-stroke: black;
-        font-weight: bold;
+        font-weight: 100;
       }
     }
   }
