style button ajust

--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -164,5 +164,12 @@ $data_buttons: (
     first_color: $white,
     second_color: $white,
     data_query: 'third'
+  ),
+  'eight': (
+    principal_bg: $orange_primary,
+    secondary_bg: $black,
+    first_color: $white,
+    second_color: $white,
+    data_query: 'seven'
   )
 );
