--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -24,7 +24,7 @@
       }
       span {
         font-family: 'PlexesPro black';
-        color: gray;
+        color: #919191;
         font-size: 2.2rem;
         -webkit-text-stroke: black;
         font-weight: 100;
