Style justify unit

--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -186,7 +186,7 @@
         flex-direction: row;
         flex-wrap: nowrap;
         align-content: center;
-        justify-content: space-evenly;
+        justify-content: start;
         align-items: center;
         width: 60%;
         padding-left: 5%;
