--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -459,7 +459,7 @@
           }
         }
       }
-      .button-second {
+      .button-fifth {
           position: absolute;
           top: 93%;
           left: 50%;
@@ -706,7 +706,7 @@
           }
         }
       }
-      .button-second {
+      .button-fifth {
         margin: 3rem 0 0 0;
         transform: skewX(-31deg) translate(-60%, -50%);
         width: 220px;
