--- a/src/sass/components/regist.scss
+++ b/src/sass/components/regist.scss
@@ -131,7 +131,7 @@
           }
         }
         //Button
-        .button-second {
+        .button-first {
           margin: 30px auto 0px;
         }
       }
