--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -31,6 +31,7 @@
     color: $first_color;
     padding: 0.3rem;
     width: 100%;
+    text-decoration: none;
     @media (min-width: 576px) {
       max-width: 540px;
       font-size: 1.3rem;
