--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -179,7 +179,7 @@
       }
     }
     .decription-units {
-      padding-bottom: 46%;
+      padding-bottom: 5%;
       @media(min-width: 1024px) {
         padding-bottom: 0;
         display: flex;
@@ -192,9 +192,9 @@
         align-content: center;
         justify-content: start;
         align-items: center;
-        width: 60%;
+        width: 96vw;
         padding-left: 5%;
-        height: 3.6rem;
+        padding: .6rem 0;
         @media(min-width: 1024px) {
           flex-wrap: nowrap;
           width: 68%;
@@ -227,6 +227,7 @@
           color: white;
           font-weight: bold;
           margin-right: 1rem;
+          flex: 0 0 70%;
           @media(min-width: 1024px) {
             font-size: 2.8rem;
             flex: 0 0 100%;
@@ -688,6 +689,7 @@
         .unit {
           text-align: center;    
           margin: .6rem 0;
+          width: 90vw;
           @media(min-width: 1024px) {
             display: flex;
             flex-direction: row;
@@ -695,7 +697,7 @@
             align-content: center;
             justify-content: space-between;
             align-items: center;
-            width: 90%;
+            width: 100%;
             margin: 0;
           }
           h2 {
@@ -705,10 +707,22 @@
             font-size: 2rem;
             color: black;
             -webkit-text-stroke: unset;
+            text-align: center;
+            @media(min-width: 1024px) {
+              text-align: left;
+            }
+            &.taste {
+              @media(min-width: 1024px) {
+                flex: 0 0 60%;
+              }
+            }
             &.amount {
               color: #FB5030;
               font-weight: 400;
               font-size: 1.6rem;
+              @media(min-width: 1024px) {
+                flex: 0 0 40%;
+              }
             }
           }
         }
