--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -55,6 +55,11 @@
     .bg-qr {
       height: 100%;
       width: 100%;
+      img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+      }
     }
   }
   .welcome {
@@ -250,13 +255,11 @@
           font-size: 1.6rem;
           color: #FB5030;
           text-transform: uppercase;
-          align-self: flex-end;
-          margin-left: -5px;
-          padding-bottom: 7px;
+          align-self: center;
           @media(min-width: 1024px) {
-            padding-bottom: 10px;
             margin: 0;
             font-size: 1.7rem;
+
           }
         }
       }
