--- a/src/sass/components/buy.scss
+++ b/src/sass/components/buy.scss
@@ -19,7 +19,7 @@
   text-align: center;
   @media(min-width: 992px) {
     height: auto;
-    min-height: 820px;
+    min-height: 100vh;
   }
   //Background image
   &::before {
@@ -63,10 +63,18 @@
         height: 1rem;
         max-width: 16rem;
         flex-direction: row;
+        max-width: 9rem;
         span {
           color: #ff4700;
           margin-right: 1rem;
           font-size: 2.1rem;
+        }
+      }
+      @media (min-width: 1450px) {
+        font-size: 6rem;
+        max-width: 23rem;
+        span {
+          font-size: 6rem;
         }
       }
     }
@@ -173,6 +181,9 @@
           font-size: 2.7rem;
           letter-spacing: 3.4px;
           padding-left: 5px;
+          @media (min-width: 1450px) {
+            font-size: 6rem;
+          }
         }
       }
       //text elige
