style zone redencion redire page

--- a/src/sass/components/zone.scss
+++ b/src/sass/components/zone.scss
@@ -11,11 +11,13 @@
  *     |- Description
  *     |- Form
  *     |- Button
+ * - Zone-scanner
+ *   |- Background image
+ *   |- Box scanner
  */
 // import variable sheet
 @import "../base/variables";
 // /*---| Zone |---*/
-
 .zone {
   position: relative;
   height: 100vh;
@@ -79,6 +81,7 @@
     }
     //Form
     .form-group {
+      margin-bottom: 10px;
       input,select {
         height: 43px;
         width: 255px;
@@ -101,9 +104,76 @@
         }
       }
     }
+    //Radio button
+    .select-button {
+      display: flex;
+      margin: 50px auto;
+      flex-wrap: wrap;
+      position: relative;
+      flex-direction: column;
+      @media(min-width: 1024px) {
+       flex-direction: row;
+       justify-content: center;
+      }
+      .form-label {
+        padding: 10px;
+        height: auto;
+        .text-first {
+          text-transform: uppercase;
+          font-family: $g-black;
+          color: $gray;
+          margin: 0;
+          line-height: 0;
+          font-size: 1.7rem;
+          letter-spacing: 3px;
+        }
+        .form-check  {
+          display: none;
+        }
+      }
+      .checked {
+        .text-first,
+        .text-second {
+          color: #ff4700;
+        }
+      }
+    }
     //Button
     .link {
       margin: 20px auto 0px;
+    }
+  }
+}
+// /*---| Zone scanner |---*/
+.zone-scanner {
+  height: 100vh;
+  position: relative;
+  //Background image
+  &::before {
+    content: '';
+    background: url('../../images/bg-zone-mobil.png') center/cover no-repeat;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    @media(min-width: 768px) {
+      background: url('../../images/bg-zone.png') center/cover no-repeat;
+    }
+  }
+  //Box scanner
+  .box-scanner{
+    width: 100%;
+    margin: 0 auto;
+    max-width: 240px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    @media(min-width: 420px) {
+      max-width: 340px;
+    }
+    @media(min-width: 768px) {
+      max-width: 500px;
     }
   }
 }
