--- a/src/sass/components/principal-slider.scss
+++ b/src/sass/components/principal-slider.scss
@@ -97,6 +97,17 @@
             height: 100%;
             background-color: black;
             z-index: -10;
+            &::before {
+              content: '';
+              background: url('../../images/bg-pricipal-banner.png') center/cover no-repeat;
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              left: 0;
+              @media(min-width: 768px) {
+                background: url('../../images/bg-pricipal-banner.png') center/cover no-repeat;
+              }
+            }
             .bg-prinicpal-slider {
               width: 100%;
               height: 100%;
