--- a/src/sass/components/page-qr.scss
+++ b/src/sass/components/page-qr.scss
@@ -541,6 +541,7 @@
     position: relative;
     height: auto;
     width: 100%;
+    padding-bottom: 25px;
     @media(min-width: 1024px) {
       display: flex;
       flex-direction: row;
