--- a/src/sass/components/thanks.scss
+++ b/src/sass/components/thanks.scss
@@ -1,12 +1,32 @@
-.tanks-component-second {
-  @media(min-width: 1024px) {
-    display: none;
-  }
-}
+/**
+ * thanks.scss
+ *
+ * These styles are for the thank.
+ *
+ * Index
+ * - Thanks 
+ *   |- Background image
+ */
+// import variable sheet
+@import "../base/variables";
+// /*---| Thank |---*/
 .thanks {
   .tanks-component-fisrt {
     height: 78vh;
     position: relative;
+    //Background image
+    &::before {
+      content: '';
+      background: url('../../images/bg-gatorade-cicle-mobil.png') center/cover no-repeat;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      z-index: -10;
+      @media(min-width: 768px) {
+        background: url('../../images/bg-gatorade-cicle.png') center/cover no-repeat;
+      }
+    }
     @media(min-width: 1024px) {
       height: 100vh;
       display: flex;
@@ -15,16 +35,6 @@
       align-content: center;
       justify-content: flex-end;
       align-items: center;
-    }
-    .img-bg-thanks {
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      z-index: -10;
-      .bg-thanks {
-        width: 100%;
-        height: 100%;
-      }
     }
     .text-tanks {
       position: absolute;
@@ -50,7 +60,7 @@
         }
         h2 {
           color: white;
-          font-weight: 400;
+          font-weight: 900;
           font-size: 3.5rem;
           @media(min-width: 1024px) {
             font-size: 80px;
@@ -68,6 +78,7 @@
           color: #FB5030;
           font-weight: 400;
           font-size: 1.6rem;
+          font-family: $g-black;
         }
       }
       .text-three {
@@ -86,21 +97,23 @@
           position: absolute;
           transform: rotate(-90deg) translate(-50%, -50%);
           left: -3%;
-          top: 12%;
+          top: 2%;
           font-size: 1rem;
           color: #FB5030;
+          font-family: $g-black;
         }
         .text-number {
           margin: 0;
-          font-size: 120px;
-          color: white;
-          height: 5rem;
+          font-size: 80px;
+          color: $white;
+          height: 3.9rem;
         }
         .text-ultimate {
-          font-size: 120px;
+          font-size: 80px;
           color: #FB5030;
-          font-weight: 400;
+          font-weight: 900;
           margin: 0;
+          letter-spacing: 5px;
         }
       }
       .text-four {
@@ -120,10 +133,14 @@
           .fruit {
             color: white;
             font-weight: 400;
+            font-family: $g-black;
+            font-size: 1.8rem;
           }
           .number-units {
             color: #FB5030;
             font-weight: 400;
+            font-family: $g-black;
+            font-size: 1.8rem;
           }
         }
       }
@@ -135,6 +152,18 @@
           display: flex;
         }
       }
+    }
+    h2 {
+      -webkit-text-stroke: 0;
+    }
+  }
+  // Mis compras
+  .tanks-component-second {
+    @media(min-width: 1024px) {
+      display: none;
+    }
+    .button-second {
+      margin: 0 auto;
     }
   }
 }
