--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -8,18 +8,19 @@
     align-items: center;
     justify-content: flex-start;
     @media(min-width: 1024px) {
-      height: 7rem;
+      height: auto;
+      padding: 4rem 1rem 0rem 2rem;
     }
-    @media(min-width: 1450px) {
-      height: 9rem;
-    }
+    // @media(min-width: 1450px) {
+    //   height: 9rem;
+    // }
     .font-line-black {
       padding-left: 3rem;
       @media(max-width: 1023px) {
         line-height: 0.7;
       }
       @media(min-width: 1024px) {
-        font-size: 4rem;
+        font-size: 5rem;
         display: flex;
       }
       span {
@@ -29,7 +30,8 @@
         -webkit-text-stroke: black;
         font-weight: 100;
         @media(min-width: 1024px) {
-          padding-left: .5rem;
+          padding: 0.2rem 0 0 0.5rem;
+          font-size: 3rem;
         }
       }
     }
@@ -138,18 +140,23 @@
               }
             }
 
-            .link.button-fifth {
-              position: absolute;
-              transform: skewX(-31deg) translate(0%, 0%);
-              left: 0;
-              bottom: -20%;
-              @media(max-width: 1023px) {
-                bottom: 0%;
-                transform: skewX(-31deg) translate(-50%, 50%);
-                left: 50%;
+            // .link.button-six {
+            //   position: absolute;
+            //   transform: skewX(-31deg) translate(0%, 0%);
+            //   left: 0;
+            //   bottom: -20%;
+            //   @media(max-width: 1023px) {
+            //     bottom: 0%;
+            //     transform: skewX(-31deg) translate(-50%, 50%);
+            //     left: 50%;
+            //   }
+            // }
+            .link.button-six {
+              margin: auto;
+              @media(min-width: 1024px) {
+                margin: 0;
               }
             }
-
             .text-lateral-body {
               position: absolute;
               transform: rotate(-90deg) translate(-50%, -50%);
