--- a/src/sass/components/secundary-slider.scss
+++ b/src/sass/components/secundary-slider.scss
@@ -1,4 +1,10 @@
 .secundary-slider {
+  @media(min-width: 1024px) {
+    height: 100vh;
+    margin-top: 5rem;
+    padding-left: 2rem;
+    min-height: 800px;
+  }
   .title-component {
     padding: 2rem 1rem;
     display: flex;
@@ -8,8 +14,8 @@
     align-items: center;
     justify-content: flex-start;
     @media(min-width: 1024px) {
-      height: auto;
-      padding: 4rem 1rem 0rem 2rem;
+      height: 10%;
+      padding: 0rem 1rem 0rem 2rem;
     }
     // @media(min-width: 1450px) {
     //   height: 9rem;
@@ -36,13 +42,34 @@
       }
     }
   }
-
+  .secundarySlider {
+    @media(min-width: 1024px) {
+      height: 90%;
+    }
+  }
   .slick-slider {
     div.slick-list {
+      @media(min-width: 1024px) {
+        height: 100%;
+      }
       .slick-track {
+        @media(min-width: 1024px) {
+          height: 100%;
+        }
         .slick-slide {
+          div {
+            // &:nth-child(1) {
+            //   @media(min-width: 1024px) {
+            //     height: 100%;
+            //   }
+            // }
+          }
           .container-slick {
             position: relative;
+            @media(min-width: 1024px) {
+              height: 90vh;
+              min-height: 700px;
+            }
             &::before {
               content: "";
               width: 100%;
@@ -57,6 +84,14 @@
 
               @media(min-width: 1024px) {
                 display: none;
+              }
+            }
+            .image {
+              @media(min-width: 1024px) {
+                height: 100%;
+                .gatsby-image-wrapper {
+                  height: 100%;
+                }
               }
             }
           }
@@ -101,7 +136,7 @@
             }
             @media(min-width: 1450px) {
               right: 15%;
-              width: 30rem;
+              width: 33rem;
             }
             &::before {
               content: "";
@@ -120,6 +155,9 @@
                 top: 50%;
                 display: none;
               }
+              @media(min-width: 1024px) {
+                top: -6%;
+              }
             }
 
             .title-slider {
@@ -134,9 +172,11 @@
               letter-spacing: 5px;
               @media(min-width: 1024px) {
                 font-size: 5rem;
+                letter-spacing: 8px;
               }
               @media(min-width: 1450px) {
                 font-size: 7rem;
+                
               }
             }
 
@@ -167,7 +207,9 @@
                 top: 0rem;
                 left: 1rem;
               }
-
+              @media(min-width: 1024px) {
+                transform: rotate(-90deg) translate(-30%, -50%);
+              }
               .h2-text-lateral {
                 text-transform: uppercase;
                 margin: auto;
@@ -178,8 +220,9 @@
                 -webkit-text-stroke: unset;
                 font-family: 'Gatorade black';
                 @media(min-width: 1024px) {
-                  font-size: 1.4rem;
-                  padding-bottom: 1rem;
+                  font-size: 1rem;
+                  padding-bottom: 1.6rem;
+                  letter-spacing: 4px;
                 }
               }
             }
@@ -188,16 +231,19 @@
               .font-line-orange {
                 font-size: 6rem;
                 height: 6rem;
+                font-family: 'PlexesPro black';
+                -webkit-text-stroke: 0.07rem #FB5030;
                 @media(max-width: 1023px) {
                   padding-left: 2rem;
                 }
                 @media(min-width: 1024px) {
-                  font-size: 5.4rem;
-                  height: 5.6rem;
+                  font-size: 5rem;
+                  height: 5.3rem;
+                  letter-spacing: 8px;
                 }
                 @media(min-width: 1450px) {
                   font-size: 8.4rem;
-                  height: 8.6rem;
+                  height: 7.8rem;
                 }
               }
             }
@@ -206,6 +252,9 @@
               padding-top: 1rem;
               @media(max-width: 1023px) {
                 width: 80%;
+              }
+              @media(min-width: 1024px) {
+                padding-top: 0rem;
               }
               p {
                 font-family: 'HelveticaNeue';
@@ -247,9 +296,10 @@
 
           &:nth-child(3) {
             .bodySlider {
-              top: 35%;
+              top: 46%;
               right: 10%;
-
+              width: 25rem;
+              margin-top: 0;
               @media(max-width: 1023px) {
                 width: 80vw;
                 height: 27rem;
@@ -352,7 +402,8 @@
       z-index: 30;
 
       @media(min-width: 1024px) {
-        right: 10%;
+        top: 92%;
+        right: 3%;
         transform: translate(-50%, -50%);
       }
 
@@ -378,7 +429,8 @@
       z-index: 30;
 
       @media(min-width: 1024px) {
-        left: 75%;
+        left: 82%;
+        top: 92%;
         transform: translate(-50%, -50%);
       }
 
