--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -100,9 +100,18 @@ header {
           height: 103px;
           position: absolute;
           top: 130px;
+          z-index: 20;
+          display: none;
           @media (min-width: 1500px) {
             top: 165px;
             right: 7rem;
+          }
+          @media (min-width: 2000px) {
+            top: 210px;
+            right: 9.8rem;
+          }
+          &.ocultar {
+            display: flex !important;
           }
           p {
             margin: 0;
